Give sidebar fixed height to stop rows scroll from jumping around

--- a/src/Components/Sidebar/_sidebar.scss
+++ b/src/Components/Sidebar/_sidebar.scss
@@ -1,6 +1,7 @@
 .sidebar {
-	height: 100px;
+	height: 100%;
 	font-size: 1.35rem;
+	min-height: 1100px;
 	width: 100%;
 	font-family: "FS Me Web Regular",Helvetica,Arial,Verdana,sans-serif;
 
